--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,9 @@
   "name": "orbit.js",
   "version": "0.6.9",
   "private": true,
+  "dependencies": {
+    "localforage": "^1.5.0",
+  },
   "devDependencies": {
     "jquery": "~1.11.1",
     "qunit": "~1.17.1",
