--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.6.9",
   "private": true,
   "dependencies": {
-    "localforage": "^1.5.0",
+    "localforage": "^1.5.0"
   },
   "devDependencies": {
     "jquery": "~1.11.1",
